syntax = "proto3";

package supplier;

service SupplierService {
  rpc CreateSupplier (SupplierRequest) returns (Result);
}

message SupplierRequest {
    string id = 1;
    string country = 2;
    string name = 3;
    int32 vatNumber = 4;
    repeated string roles = 5;
    repeated string sectors = 6;
    repeated Certificate certificates = 7;
}
message Certificate{
  string filename = 1;
  bytes file = 2;
}
message Result {
  int32 status = 1;
  string message = 2;
}
